fixed layout issues on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,8 @@ footer p{
 }
 
 
+
+
 /* top menu */
 
 #menu {
@@ -194,7 +196,7 @@ h2 {
     border: 10px solid #C08081;
     border-radius: 10px;
     display: flex;
-    height: 30px;
+    height: fit-content;
 }
 
 /* intro section */
@@ -243,10 +245,7 @@ h2 {
 
 */
 
-#gradeSection {
-    width: 33%;
-    float: left;
-}
+
 
 .tabContent{
     height: 500px;
@@ -290,6 +289,7 @@ h2 {
     font-size: 85%;
     margin: 7px;
     margin-top: 10px;
+    width: 100%;
 }
 
 #scho {
@@ -311,18 +311,13 @@ h2 {
     margin: auto;
 }
 
-#largeImg {
-    z-index: 1;
-    width: 50%;
-}
+
 
 
 
 /* Experience */
 
 #experienceSection {
-    float: left;
-    width: 66%;
     height: 500px;
     margin-left: 10px;
 }
@@ -330,10 +325,10 @@ h2 {
 /* Projects */
 
 #projectsSection {
+    width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
-    float: right;
 }
 
 #projects {
@@ -344,7 +339,7 @@ h2 {
     margin-bottom: 10px;
     border-radius: 10px;
     cursor: pointer;
-    height: 300px;
+    height: fit-content;
     text-decoration: none;
     transition: transform .2s;
 }
@@ -393,6 +388,7 @@ h2 {
 
     #projects {
         width: 50%;
+        height: 300px;
     }
 
     #projectsSection{
@@ -430,11 +426,39 @@ h2 {
         max-width: 350px;
     }
 
+    /* body */
+    h2{
+    height: 30px;
+
+    }
+
     /* projects */
 
     #projects {
         width: 50%;
     }
+
+    /* grades */
+
+    #gradeSection {
+        width: 33%;
+        float: left;
+    }
+
+    /* experience */
+
+    #experienceSection {
+        float: left;
+        width: 66%;
+
+    }
+
+    /* Projects */
+
+    #projectsSection {
+        float: right;
+    }
+
 
 
 }
